// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes text color based on theme 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#2e2e2e",
          "fontFamily": "IBMPlexSans",
          "fontSize": 17,
          "lineHeight": 28,
        },
        Object {
          "writingDirection": "ltr",
        },
        undefined,
      ]
    }
  >
    Text
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#2e2e2e",
          "fontFamily": "IBMPlexSans",
          "fontSize": 17,
          "lineHeight": 28,
        },
        Object {
          "writingDirection": "ltr",
        },
        undefined,
      ]
    }
  >
    Text
  </Text>
</View>
`;

exports[`includes extra background View if setBackground=true 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#4e4e4e",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1f2c9b",
            "fontFamily": "IBMPlexSans-Bold",
            "fontSize": 52,
            "fontWeight": "500",
            "lineHeight": 52,
          },
          Object {
            "writingDirection": "ltr",
          },
          undefined,
        ]
      }
    >
      Text
    </Text>
  </View>
</View>
`;
